[package]
name = "ptsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
indicatif = { version = "0.17.0", features = ["tokio"] }
tempfile = "3.3.0"
tokio = { version = "1.20.1", features = ["full"] }
