[package]
name = "ptsd"
description = "Does a thing, or perhaps stuff, parllelibly"
license = "MIT"
repository = "https://github.com/Gilnaa/ptsd"
version = "0.1.0"
edition = "2021"
categories = ["command-line-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
indicatif = { version = "0.17.0", features = ["tokio"] }
tempfile = "3.3.0"
tokio = { version = "1.20.1", features = ["full"] }
